Update from https://github.com/babsballetschool/website/commit/d90b0506716571f2261b9b72402e9bca20b316a4

--- a/dansproject.html
+++ b/dansproject.html
@@ -41,7 +41,7 @@ kosten totaal €50,- voor leerlingen 18+ en €45,- voor 18-
 Mensen van buitenaf zijn ook welkom, zij betalen € 7,- extra administratie kosten. 
 Ben snel met je inschrijving! 
 Bij voldoende animo gaat het project door. </p>
-<p>Inschrijven kan via het formulier dat in de studio ligt of via de mail: <a href="mailto:&#98;&#x61;&#98;&#x73;&#x40;&#98;&#97;&#98;&#x73;&#98;&#97;&#x6c;&#x6c;&#x65;&#116;&#115;&#x63;&#x68;&#111;&#x6f;&#108;&#x2e;&#110;&#108;">&#98;&#x61;&#98;&#x73;&#x40;&#98;&#97;&#98;&#x73;&#98;&#97;&#x6c;&#x6c;&#x65;&#116;&#115;&#x63;&#x68;&#111;&#x6f;&#108;&#x2e;&#110;&#108;</a> </p>
+<p>Inschrijven kan via het formulier dat in de studio ligt of via de mail: <a href="mailto:&#x62;&#x61;&#x62;&#x73;&#64;&#x62;&#97;&#x62;&#x73;&#x62;&#x61;&#x6c;&#x6c;&#101;&#x74;&#115;&#x63;&#104;&#x6f;&#x6f;&#108;&#46;&#x6e;&#108;">&#x62;&#x61;&#x62;&#x73;&#64;&#x62;&#97;&#x62;&#x73;&#x62;&#x61;&#x6c;&#x6c;&#101;&#x74;&#115;&#x63;&#104;&#x6f;&#x6f;&#108;&#46;&#x6e;&#108;</a> </p>
 </section>
         </main>
         <footer>
