--- a/hoeveel.html
+++ b/hoeveel.html
@@ -63,12 +63,12 @@
 </code></pre>
 <p>De kortingen zijn niet van toepassing op de Korte Cursus.</p>
 </section><section><h2 id="dans-projecten">Dans Projecten</h2>
-<p>Dans porjecten worden apart aangekondigd en kunnen varieren in prijs afhankelijk van de duur van het project.
+<p>Dans projecten worden apart aangekondigd en kunnen varieren in prijs afhankelijk van de duur van het project.
 Dans Project 3: Modern Gevorderd 11 &amp; 25 maart (14:00-16:00)</p>
 <p>18+  €50,-</p>
 <p>18-  €45,-</p>
 </section><section><h2 id="betalings-regeling">Betalings regeling:</h2>
-<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#x62;&#x61;&#98;&#115;&#64;&#98;&#x61;&#x62;&#115;&#x62;&#97;&#108;&#108;&#101;&#116;&#x73;&#99;&#x68;&#x6f;&#x6f;&#x6c;&#x2e;&#110;&#108;">&#x62;&#x61;&#98;&#115;&#64;&#98;&#x61;&#x62;&#115;&#x62;&#97;&#108;&#108;&#101;&#116;&#x73;&#99;&#x68;&#x6f;&#x6f;&#x6c;&#x2e;&#110;&#108;</a> </p>
+<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#x62;&#x61;&#98;&#x73;&#x40;&#x62;&#97;&#98;&#x73;&#98;&#x61;&#108;&#x6c;&#101;&#x74;&#x73;&#x63;&#104;&#111;&#x6f;&#x6c;&#46;&#110;&#x6c;">&#x62;&#x61;&#98;&#x73;&#x40;&#x62;&#97;&#98;&#x73;&#98;&#x61;&#108;&#x6c;&#101;&#x74;&#x73;&#x63;&#104;&#111;&#x6f;&#x6c;&#46;&#110;&#x6c;</a> </p>
 </section>
         </main>
         <footer>
