--- a/hoeveel.html
+++ b/hoeveel.html
@@ -68,7 +68,7 @@ Dans Project 3: Modern Gevorderd 11 &amp; 25 maart (14:00-16:00)</p>
 <p>18+  €50,-</p>
 <p>18-  €45,-</p>
 </section><section><h2 id="betalings-regeling">Betalings regeling:</h2>
-<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#x62;&#x61;&#98;&#x73;&#x40;&#x62;&#97;&#98;&#x73;&#98;&#x61;&#108;&#x6c;&#101;&#x74;&#x73;&#x63;&#104;&#111;&#x6f;&#x6c;&#46;&#110;&#x6c;">&#x62;&#x61;&#98;&#x73;&#x40;&#x62;&#97;&#98;&#x73;&#98;&#x61;&#108;&#x6c;&#101;&#x74;&#x73;&#x63;&#104;&#111;&#x6f;&#x6c;&#46;&#110;&#x6c;</a> </p>
+<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#98;&#97;&#98;&#115;&#x40;&#x62;&#x61;&#98;&#115;&#98;&#x61;&#x6c;&#108;&#x65;&#116;&#x73;&#x63;&#104;&#111;&#x6f;&#108;&#x2e;&#x6e;&#x6c;">&#98;&#97;&#98;&#115;&#x40;&#x62;&#x61;&#98;&#115;&#98;&#x61;&#x6c;&#108;&#x65;&#116;&#x73;&#x63;&#104;&#111;&#x6f;&#108;&#x2e;&#x6e;&#x6c;</a> </p>
 </section>
         </main>
         <footer>
