--- a/dansproject.html
+++ b/dansproject.html
@@ -41,7 +41,7 @@ kosten totaal €50,- voor leerlingen 18+ en €45,- voor 18-
 Mensen van buitenaf zijn ook welkom, zij betalen € 7,- extra administratie kosten. 
 Ben snel met je inschrijving! 
 Bij voldoende animo gaat het project door. </p>
-<p>Inschrijven kan via het formulier dat in de studio ligt of via de mail: <a href="mailto:&#x62;&#x61;&#x62;&#x73;&#x40;&#x62;&#x61;&#98;&#x73;&#98;&#x61;&#x6c;&#x6c;&#101;&#x74;&#x73;&#99;&#104;&#x6f;&#x6f;&#108;&#46;&#110;&#x6c;">&#x62;&#x61;&#x62;&#x73;&#x40;&#x62;&#x61;&#98;&#x73;&#98;&#x61;&#x6c;&#x6c;&#101;&#x74;&#x73;&#99;&#104;&#x6f;&#x6f;&#108;&#46;&#110;&#x6c;</a> </p>
+<p>Inschrijven kan via het formulier dat in de studio ligt of via de mail: <a href="mailto:&#x62;&#x61;&#98;&#x73;&#x40;&#98;&#x61;&#x62;&#x73;&#x62;&#97;&#108;&#108;&#x65;&#116;&#x73;&#99;&#x68;&#111;&#x6f;&#x6c;&#46;&#x6e;&#108;">&#x62;&#x61;&#98;&#x73;&#x40;&#98;&#x61;&#x62;&#x73;&#x62;&#97;&#108;&#108;&#x65;&#116;&#x73;&#99;&#x68;&#111;&#x6f;&#x6c;&#46;&#x6e;&#108;</a> </p>
 </section>
         </main>
         <footer>
