--- a/index.html
+++ b/index.html
@@ -33,17 +33,21 @@
         </header>
         <main class="">
             <div class="where"><span>home</span></div>
-            <section><h1 id="seizoen-2022-2023-inschrijven-bij-babs-balletschool">Seizoen 2022-2023 <img src="resources/image/algemeen//Modern.JPG" alt="Inschrijven bij Babs Balletschool"></h1>
-<p>Wil je ook een keer ervaren hoe leuk dansen is? Vraag een proefles aan en stuur een mail naar:<a href="mailto:babs@babsballetschool.nl">babs@babsballetschool.nl</a>
-instromen is nog mogelijk! </p>
-</section><section><h1 id="project-moderne-dans-gevorderd-inschrijven-bij-babs-balletschool">Project Moderne dans gevorderd <img src="resources/image/algemeen/IMG_E8621.JPG" alt="Inschrijven bij Babs Balletschool"></h1>
-<p>We hebben weer een volgend dansproject, dit keer Modern gevorderd, Sarah Döker gaat het project verzorgen. 
-Dit project duurt 2 zaterdagen (11 &amp; 25 maart) van 14:00-16:00 (dubbel dansuur!) voor gevorderde dansers en kost totaal  € 50,- voor leerlingen, mensen van buitenaf zijn ook welkom, zij betalen € 7,- extra administratie kosten. Ben snel met je inschrijving! 
-Bij voldoende animo gaat het project door. 
-Inschrijven kan via het formulier dat in de studio ligt of via de mail: <a href="mailto:&#x62;&#97;&#98;&#115;&#x40;&#98;&#97;&#98;&#x73;&#x62;&#x61;&#108;&#108;&#101;&#x74;&#x73;&#99;&#104;&#x6f;&#111;&#108;&#x2e;&#x6e;&#x6c;">&#x62;&#97;&#98;&#115;&#x40;&#98;&#97;&#98;&#x73;&#x62;&#x61;&#108;&#108;&#101;&#x74;&#x73;&#99;&#104;&#x6f;&#111;&#108;&#x2e;&#x6e;&#x6c;</a> </p>
+            <section><h1 id="peuterdans-cursus-inschrijven-bij-babs-balletschool">Peuterdans Cursus <img src="resources/image/algemeen//Modern.JPG" alt="Inschrijven bij Babs Balletschool"></h1>
+<p>vanaf maandag 17 april starten we weer een danscursus voor de allerkleinste dansers. Vanaf 2 jaar mogen de peuters met hun papa, mama, opa of oma meedansen. Spelenderwijs maken zij kennis met muziek, dans en ontdekken ze wat ze allemaal al kunnen! Kom ook dansen met je kleintje en geniet samen. 
+Cursus 1 10:00-10:45
+Cursus 2 10:45-11:30 
+Kosten € 83,- 
+inschrijven kan via <a href="mailto:babs@babsballetschool.nl">babs@babsballetschool.nl</a></p>
 </section><section><h1 id="nieuwsbrief--inschrijven-bij-babs-balletschool">Nieuwsbrief  <img src="resources/image/algemeen/ballet-krant.jpg" alt="Inschrijven bij Babs Balletschool"></h1>
-<p>de 3e nieuwsbrief is in februari verstuurd met alle informatie die je moet weten over de balletschool en onze voorstelling op 1 juli 2023 in de Schouwburg Arnhem! 
+<p>de 3e nieuwsbrief is in februari verstuurd met alle informatie die je moet weten over de balletschool en onze generale repetitie op 23 juni en onze grote voorstelling op 1 juli 2023 in de Schouwburg Arnhem! 
 Mocht je deze niet hebben ontvangen stuur dan een mail naar: <a href="mailto:babs@babsballetschool.nl">babs@babsballetschool.nl</a></p>
+</section><section><p>#Ahoy!  <img src="resources/image/algemeen/Ahoy.jpg" alt="Dansvoorstelling Babs Balletschool">
+Ahoy allemaal! de kaartverkoop is gestart, boek je mooie plaatsen in het stadstheater van Arnhem voor onze voorstellingen: <a href="https://www.musisenstadstheater.nl/zoeken?keywords=ahoy">https://www.musisenstadstheater.nl/zoeken?keywords=ahoy</a></p>
+</section><section><p>#Pasen en Meivakantie  <img src="resources/image/algemeen/Jubileumvoorstelling%20eendje%20en%20zwanen.jpg/" alt="vakanties bij Babs Balletschool">
+*maandag 10 april is het 2e paasdag, er zijn dan geen lessen. 
+*donderdag 27 april t/m 4 mei is het Mei-vakantie, er zijn dan geen lessen. </p>
+<p>Wij wensen iedereen een prachtig voorjaar toe! </p>
 </section><section><h1 id="ballet-spelletje-balletris">Ballet Spelletje Balletris</h1>
 <p><img src="resources/image/balletris/babsballetschool-logo.gif" alt="dansplezier bij Babs&#39;Balletschool"> 
  Typ deze code in op je toetsenbord:  ⬆⬆⬇⬇⬅➡⬅➡ ba    </p>
