Update from https://github.com/babsballetschool/website/commit/1e2e07524c770695707e665e156bfcf86d23d500

--- a/hoeveel.html
+++ b/hoeveel.html
@@ -68,7 +68,7 @@ Dans Project 3: Modern Gevorderd 11 &amp; 25 maart (14:00-16:00)</p>
 <p>18+  €50,-</p>
 <p>18-  €45,-</p>
 </section><section><h2 id="betalings-regeling">Betalings regeling:</h2>
-<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#x62;&#97;&#98;&#115;&#x40;&#98;&#x61;&#98;&#115;&#x62;&#x61;&#108;&#x6c;&#101;&#x74;&#115;&#x63;&#104;&#x6f;&#x6f;&#108;&#x2e;&#110;&#108;">&#x62;&#97;&#98;&#115;&#x40;&#98;&#x61;&#98;&#115;&#x62;&#x61;&#108;&#x6c;&#101;&#x74;&#115;&#x63;&#104;&#x6f;&#x6f;&#108;&#x2e;&#110;&#108;</a> </p>
+<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#x62;&#x61;&#x62;&#115;&#64;&#x62;&#x61;&#98;&#115;&#98;&#x61;&#108;&#x6c;&#x65;&#x74;&#x73;&#99;&#104;&#x6f;&#111;&#108;&#46;&#110;&#x6c;">&#x62;&#x61;&#x62;&#115;&#64;&#x62;&#x61;&#98;&#115;&#98;&#x61;&#108;&#x6c;&#x65;&#x74;&#x73;&#99;&#104;&#x6f;&#111;&#108;&#46;&#110;&#x6c;</a> </p>
 </section>
         </main>
         <footer>
