--- a/index.html
+++ b/index.html
@@ -33,12 +33,13 @@
         </header>
         <main class="">
             <div class="where"><span>home</span></div>
-            <section><h1 id="peuterdans-cursus-inschrijven-bij-babs-balletschool">Peuterdans Cursus <img src="resources/image/algemeen//Modern.JPG" alt="Inschrijven bij Babs Balletschool"></h1>
-<p>vanaf maandag 17 april starten we weer een danscursus voor de allerkleinste dansers. Vanaf 2 jaar mogen de peuters met hun papa, mama, opa of oma meedansen. Spelenderwijs maken zij kennis met muziek, dans en ontdekken ze wat ze allemaal al kunnen! Kom ook dansen met je kleintje en geniet samen. 
-Cursus 1 10:00-10:45
-Cursus 2 10:45-11:30 
-Kosten € 83,- 
-inschrijven kan via <a href="mailto:babs@babsballetschool.nl">babs@babsballetschool.nl</a></p>
+            <section><h1 id="peuterdans-cursus-inschrijven-bij-babs-balletschool">Peuterdans Cursus <img src="resources/image/algemeen/Peuterdans.JPG" alt="Inschrijven bij Babs Balletschool"></h1>
+<p>vanaf maandag 17 april starten we weer een danscursus voor de allerkleinste dansers. 
+Vanaf 2 jaar mogen de peuters met hun papa, mama, opa of oma meedansen. Spelenderwijs maken zij kennis met muziek, dans en ontdekken ze wat ze allemaal al kunnen! Kom ook dansen met je kleintje en geniet samen. </p>
+<p>Cursus 1 10:00-10:45</p>
+<p>Cursus 2 10:45-11:30 </p>
+<p>Kosten € 83,- </p>
+<p>inschrijven kan via <a href="mailto:babs@babsballetschool.nl">babs@babsballetschool.nl</a></p>
 </section><section><h1 id="nieuwsbrief--inschrijven-bij-babs-balletschool">Nieuwsbrief  <img src="resources/image/algemeen/ballet-krant.jpg" alt="Inschrijven bij Babs Balletschool"></h1>
 <p>de 3e nieuwsbrief is in februari verstuurd met alle informatie die je moet weten over de balletschool en onze generale repetitie op 23 juni en onze grote voorstelling op 1 juli 2023 in de Schouwburg Arnhem! 
 Mocht je deze niet hebben ontvangen stuur dan een mail naar: <a href="mailto:babs@babsballetschool.nl">babs@babsballetschool.nl</a></p>
