Update from https://github.com/babsballetschool/website/commit/a3510420b82fcf94dd5121be5ef169ec4f120dc5

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@ Vanaf 2 jaar mogen de peuters met hun papa, mama, opa of oma meedansen. Spelende
 <p>de 3e nieuwsbrief is in februari verstuurd met alle informatie die je moet weten over de balletschool en onze generale repetitie op 23 juni en onze grote voorstelling op 1 juli 2023 in de Schouwburg Arnhem! 
 Mocht je deze niet hebben ontvangen stuur dan een mail naar: <a href="mailto:babs@babsballetschool.nl">babs@babsballetschool.nl</a></p>
 </section><section><p>#Ahoy!  <img src="resources/image/algemeen/Ahoy.jpg" alt="Dansvoorstelling Babs Balletschool">
-Ahoy allemaal! de kaartverkoop is gestart, boek je mooie plaatsen in het stadstheater van Arnhem voor onze voorstellingen: <a href="https://www.musisenstadstheater.nl/zoeken?keywords=ahoy">https://www.musisenstadstheater.nl/zoeken?keywords=ahoy</a></p>
-</section><section><p>#Pasen en Meivakantie  <img src="resources/image/algemeen/Jubileumvoorstelling%20eendje%20en%20zwanen.jpg/" alt="vakanties bij Babs Balletschool">
-*maandag 10 april is het 2e paasdag, er zijn dan geen lessen. 
-*donderdag 27 april t/m 4 mei is het Mei-vakantie, er zijn dan geen lessen. </p>
+Ahoy allemaal! de kaartverkoop is gestart, boek je mooie plaatsen in het stadstheater van Arnhem voor onze voorstellingen: <a href="https://www.musisenstadstheater.nl/programma/ahoy/7694">https://www.musisenstadstheater.nl/programma/ahoy/7694</a></p>
+</section><section><p>#Pasen en Meivakantie  <img src="resources/image/algemeen/Jubileumvoorstelling%20eendje%20en%20zwanen.jpg/" alt="vakanties bij Babs Balletschool"></p>
+<p>*maandag 10 april is het 2e paasdag, er zijn dan geen lessen. </p>
+<p>*donderdag 27 april t/m 4 mei is het Mei-vakantie, er zijn dan geen lessen. </p>
 <p>Wij wensen iedereen een prachtig voorjaar toe! </p>
 </section><section><h1 id="ballet-spelletje-balletris">Ballet Spelletje Balletris</h1>
 <p><img src="resources/image/balletris/babsballetschool-logo.gif" alt="dansplezier bij Babs&#39;Balletschool"> 
