--- a/dansproject.html
+++ b/dansproject.html
@@ -41,7 +41,7 @@ kosten totaal €50,- voor leerlingen 18+ en €45,- voor 18-
 Mensen van buitenaf zijn ook welkom, zij betalen € 7,- extra administratie kosten. 
 Ben snel met je inschrijving! 
 Bij voldoende animo gaat het project door. </p>
-<p>Inschrijven kan via het formulier dat in de studio ligt of via de mail: <a href="mailto:&#98;&#x61;&#x62;&#115;&#x40;&#x62;&#97;&#x62;&#115;&#98;&#x61;&#108;&#108;&#x65;&#x74;&#115;&#x63;&#104;&#x6f;&#x6f;&#108;&#x2e;&#110;&#108;">&#98;&#x61;&#x62;&#115;&#x40;&#x62;&#97;&#x62;&#115;&#98;&#x61;&#108;&#108;&#x65;&#x74;&#115;&#x63;&#104;&#x6f;&#x6f;&#108;&#x2e;&#110;&#108;</a> </p>
+<p>Inschrijven kan via het formulier dat in de studio ligt of via de mail: <a href="mailto:&#x62;&#97;&#98;&#115;&#x40;&#98;&#97;&#98;&#x73;&#x62;&#x61;&#108;&#108;&#101;&#x74;&#x73;&#x63;&#x68;&#x6f;&#111;&#x6c;&#x2e;&#110;&#x6c;">&#x62;&#97;&#98;&#115;&#x40;&#98;&#97;&#98;&#x73;&#x62;&#x61;&#108;&#108;&#101;&#x74;&#x73;&#x63;&#x68;&#x6f;&#111;&#x6c;&#x2e;&#110;&#x6c;</a> </p>
 </section>
         </main>
         <footer>
