--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@ Vanaf 2 jaar mogen de peuters met hun papa, mama, opa of oma meedansen. Spelende
 </section><section><h1 id="nieuwsbrief--inschrijven-bij-babs-balletschool">Nieuwsbrief  <img src="resources/image/algemeen/ballet-krant.jpg" alt="Inschrijven bij Babs Balletschool"></h1>
 <p>de 3e nieuwsbrief is in februari verstuurd met alle informatie die je moet weten over de balletschool en onze generale repetitie op 23 juni en onze grote voorstelling op 1 juli 2023 in de Schouwburg Arnhem! 
 Mocht je deze niet hebben ontvangen stuur dan een mail naar: <a href="mailto:babs@babsballetschool.nl">babs@babsballetschool.nl</a></p>
-</section><section><p>#Ahoy!  <img src="resources/image/algemeen/Ahoy.jpg" alt="Dansvoorstelling Babs Balletschool">
-Ahoy allemaal! de kaartverkoop is gestart, boek je mooie plaatsen in het stadstheater van Arnhem voor onze voorstellingen: <a href="https://www.musisenstadstheater.nl/programma/ahoy/7694">https://www.musisenstadstheater.nl/programma/ahoy/7694</a></p>
+</section><section><h1 id="ahoy--dansvoorstelling-babs-balletschool">Ahoy!  <img src="resources/image/algemeen/Ahoy.jpg" alt="Dansvoorstelling Babs Balletschool"></h1>
+<p>Ahoy allemaal! de kaartverkoop is gestart, boek je mooie plaatsen in het stadstheater van Arnhem voor onze voorstellingen: <a href="https://www.musisenstadstheater.nl/programma/ahoy/7694">https://www.musisenstadstheater.nl/programma/ahoy/7694</a></p>
 </section><section><p>#Pasen en Meivakantie  <img src="resources/image/algemeen/Jubileumvoorstelling%20eendje%20en%20zwanen.jpg/" alt="vakanties bij Babs Balletschool"></p>
 <p>*maandag 10 april is het 2e paasdag, er zijn dan geen lessen. </p>
 <p>*donderdag 27 april t/m 4 mei is het Mei-vakantie, er zijn dan geen lessen. </p>
