--- a/hoeveel.html
+++ b/hoeveel.html
@@ -68,7 +68,7 @@ Dans Project 3: Modern Gevorderd 11 &amp; 25 maart (14:00-16:00)</p>
 <p>18+  €50,-</p>
 <p>18-  €45,-</p>
 </section><section><h2 id="betalings-regeling">Betalings regeling:</h2>
-<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#98;&#97;&#x62;&#115;&#x40;&#98;&#97;&#98;&#x73;&#x62;&#97;&#x6c;&#x6c;&#101;&#x74;&#x73;&#x63;&#104;&#x6f;&#111;&#x6c;&#x2e;&#110;&#108;">&#98;&#97;&#x62;&#115;&#x40;&#98;&#97;&#98;&#x73;&#x62;&#97;&#x6c;&#x6c;&#101;&#x74;&#x73;&#x63;&#104;&#x6f;&#111;&#x6c;&#x2e;&#110;&#108;</a> </p>
+<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#98;&#x61;&#98;&#115;&#64;&#98;&#97;&#98;&#115;&#98;&#97;&#108;&#x6c;&#x65;&#116;&#115;&#99;&#104;&#111;&#x6f;&#x6c;&#x2e;&#x6e;&#x6c;">&#98;&#x61;&#98;&#115;&#64;&#98;&#97;&#98;&#115;&#98;&#97;&#108;&#x6c;&#x65;&#116;&#115;&#99;&#104;&#111;&#x6f;&#x6c;&#x2e;&#x6e;&#x6c;</a> </p>
 </section>
         </main>
         <footer>
