Update from https://github.com/babsballetschool/website/commit/11eeb0456580740a605df8eaec139238ae325191

--- a/index.html
+++ b/index.html
@@ -33,23 +33,23 @@
         </header>
         <main class="">
             <div class="where"><span>home</span></div>
-            <section><h1 id="peuterdans-cursus-inschrijven-bij-babs-balletschool">Peuterdans Cursus <img src="resources/image/algemeen/Peuterdans.JPG" alt="Inschrijven bij Babs Balletschool"></h1>
-<p>vanaf maandag 17 april starten we weer een danscursus voor de allerkleinste dansers. 
-Vanaf 2 jaar mogen de peuters met hun papa, mama, opa of oma meedansen. Spelenderwijs maken zij kennis met muziek, dans en ontdekken ze wat ze allemaal al kunnen! Kom ook dansen met je kleintje en geniet samen. </p>
-<p>Cursus 1 10:00-10:45</p>
-<p>Cursus 2 10:45-11:30 </p>
-<p>Kosten € 83,- </p>
-<p>inschrijven kan via <a href="mailto:babs@babsballetschool.nl">babs@babsballetschool.nl</a></p>
-</section><section><h1 id="nieuwsbrief--inschrijven-bij-babs-balletschool">Nieuwsbrief  <img src="resources/image/algemeen/ballet-krant.jpg" alt="Inschrijven bij Babs Balletschool"></h1>
-<p>de 3e nieuwsbrief is in februari verstuurd met alle informatie die je moet weten over de balletschool en onze generale repetitie op 23 juni en onze grote voorstelling op 1 juli 2023 in de Schouwburg Arnhem! 
-Mocht je deze niet hebben ontvangen stuur dan een mail naar: <a href="mailto:babs@babsballetschool.nl">babs@babsballetschool.nl</a></p>
-</section><section><h1 id="ahoy--dansvoorstelling-babs-balletschool">Ahoy!  <img src="resources/image/algemeen/Ahoy.jpg" alt="Dansvoorstelling Babs Balletschool"></h1>
-<p>Ahoy allemaal! de kaartverkoop is gestart, boek je mooie plaatsen in het stadstheater van Arnhem voor onze voorstellingen: <a href="https://www.musisenstadstheater.nl/programma/ahoy/7694">https://www.musisenstadstheater.nl/programma/ahoy/7694</a></p>
-</section><section><h1 id="pasen-en-meivakantie">Pasen en Meivakantie</h1>
-<p><img src="resources/image/algemeen/meivakantie.jpg" alt="vakanties bij Babs Balletschool"></p>
-<p>*maandag 10 april is het 2e paasdag, er zijn dan geen lessen. </p>
-<p>*donderdag 27 april t/m 4 mei is het Mei-vakantie, er zijn dan geen lessen. </p>
-<p>Wij wensen iedereen een prachtig voorjaar toe! </p>
+            <section><h1 id="start-seizoen-2023-2024">Start seizoen 2023-2024</h1>
+<p><img src="resources/image/algemeen/balletklok.jpg" alt="dansrooster 2023-2024 bij Babs&#39;Balletschool"> 
+Na de zomer straks weer lekker dansen? 
+Kom meedoen in de gratis indans-week van <strong>28 augustus t/m 1 september</strong> en schrijf je in voor het aankomende dansseizoen.
+via <a href="mailto:babs@babsballetschool.nl">babs@babsballetschool.nl</a></p>
+<p>Nieuw lesrooster &amp; vakantie rooster 23-24: </p>
+</section><section><h1 id="presentaties-2024">Presentaties 2024</h1>
+<p><img src="resources/image/algemeen/Winter%202021.jpg" alt="Presentaties Babs&#39;Balletschool"> 
+In het nieuwe dansseizoen staan natuurlijk de lessen weer centraal maar organiseren we ook een Open Podium waar leerlingen hun eigen werk kunnen tonen. 
+Op <strong>zaterdag 16 december</strong> presenteren we een mini voorstelling WINTER in Theater de KiK dus zet de datum alvast in de agenda! </p>
+</section><section><h1 id="paardenmarkt-elst">Paardenmarkt Elst</h1>
+<p><img src="resources/image/algemeen/balletkapstok.jpg" alt="dansplezier bij Babs&#39;Balletschool"> 
+Op maandag 4 september staat Elst in het teken van de Paardenmarkt, wij zijn dan gesloten, er zijn dan geen lessen. </p>
+</section><section><h1 id="open-dag">Open Dag</h1>
+<p><img src="resources/image/algemeen/Open%20Dag%20(2).jpg" alt="Open Dag bij Babs&#39;Balletschool"> 
+<strong>Zondag 10 september</strong> is er weer een gezellige Open Dag in samenwerking met de Muziekschool All Music en Theater de KiK.
+Tijdens deze dag kun je genieten van workshops, presentaties en open lessen bekijken. Het programma volgt eind augustus.</p>
 </section><section><h1 id="ballet-spelletje-balletris">Ballet Spelletje Balletris</h1>
 <p><img src="resources/image/balletris/babsballetschool-logo.gif" alt="dansplezier bij Babs&#39;Balletschool"> 
  Typ deze code in op je toetsenbord:  ⬆⬆⬇⬇⬅➡⬅➡ ba    </p>
