Update from https://github.com/babsballetschool/website/commit/7d3dcf25d230c4e16b198d35d2874abda7a37ef9

--- a/hoeveel.html
+++ b/hoeveel.html
@@ -33,14 +33,14 @@
         </header>
         <main class="">
             <div class="where"><span>hoeveel</span></div>
-            <section><h1 id="tarieven-seizoen-2022---2023"><strong>Tarieven seizoen 2022 - 2023</strong></h1>
+            <section><h1 id="tarieven-seizoen-2023---2024-worden-binnenkort-bijgewerkt"><strong>Tarieven seizoen 2023 - 2024</strong> worden binnenkort bijgewerkt.</h1>
 <p><img src="resources/image/algemeen/portemonnaie%20ballet.jpg" alt="dansplezier bij Babs Balletschool"></p>
-<h2 id="reguliere-lessen--volledig-dansseizoen-2022-2023-zijn---38-lessen">Reguliere lessen = volledig dansseizoen (2022-2023 zijn +/- 38 lessen)</h2>
+<h2 id="reguliere-lessen--volledig-dansseizoen-2023-2024-zijn---38-lessen">Reguliere lessen = volledig dansseizoen (2023-2024 zijn +/- 38 lessen)</h2>
 <table>
-<tr><td>2 t/m 5 jaar(P1-K1):</td><td>€ 220,- per seizoen (45 min. 1 les per week)</td></tr>
-<tr><td>6 t/m 17 jaar:</td><td>€ 255,- per seizoen (60 min. 1 les per week)</td></tr>
-<tr><td>18 jaar en ouder:</td><td>€ 287,- per seizoen (60 min.1 les per week)</td></tr>
-<tr><td>extra Spitzen (15 min.):</td><td>€ 50,- per seizoen. (aansluitend a.d. les & in overleg) Hierop krijgt u geen korting.</td></tr>
+<tr><td>4 t/m 5 jaar(P1-K1):</td><td>€ ,- per seizoen (45 min. 1 les per week)</td></tr>
+<tr><td>6 t/m 17 jaar:</td><td>€ ,- per seizoen (60 min. 1 les per week)</td></tr>
+<tr><td>18 jaar en ouder:</td><td>€,- per seizoen (60 min.1 les per week)</td></tr>
+<tr><td>extra Spitzen (15 min.):</td><td>€ ,- per seizoen. (aansluitend a.d. les & in overleg) Hierop krijgt u geen korting.</td></tr>
 </table>
 
 
@@ -53,22 +53,19 @@
 <li>Een Korte Cursus is geen onderdeel van het reguliere rooster en is vaak een kennismakings cursus. Deze duren max.12 weken en worden vooraf aangekondigd. In rooster aangeduid als KC.</li>
 </ul>
 <table>                            **leerlingen:**              
-<tr><td>Korte cursus (12 lessen) t/m 17 jaar:</td><td>€  96,-</td></tr>
-<tr><td>Korte cursus (12 lessen) vanaf 18 jaar:</td><td>€ 146,-</td></tr>
+<tr><td>Korte cursus (12 lessen) t/m 17 jaar:</td><td>€ -</td></tr>
+<tr><td>Korte cursus (12 lessen) vanaf 18 jaar:</td><td>€ -</td></tr>
 
 </table>                          **niet-leerlingen** 
 
-<pre><code>                              t/m 17 jaar:&lt;/td&gt;&lt;td&gt;€  103,-&lt;/td&gt;&lt;/tr&gt;
-                              vanaf 18 jaar:&lt;/td&gt;&lt;td&gt;€ 153,-&lt;/td&gt;&lt;/tr&gt;
+<pre><code>                              t/m 17 jaar:&lt;/td&gt;&lt;td&gt;€ -&lt;/td&gt;&lt;/tr&gt;
+                              vanaf 18 jaar:&lt;/td&gt;&lt;td&gt;€ -&lt;/td&gt;&lt;/tr&gt;
 </code></pre>
 <p>De kortingen zijn niet van toepassing op de Korte Cursus.</p>
 </section><section><h2 id="dans-projecten">Dans Projecten</h2>
-<p>Dans projecten worden apart aangekondigd en kunnen varieren in prijs afhankelijk van de duur van het project.
-Dans Project 3: Modern Gevorderd 11 &amp; 25 maart (14:00-16:00)</p>
-<p>18+  €50,-</p>
-<p>18-  €45,-</p>
+<p>Dans projecten worden apart aangekondigd en kunnen varieren in prijs afhankelijk van de duur van het project.</p>
 </section><section><h2 id="betalings-regeling">Betalings regeling:</h2>
-<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#98;&#x61;&#98;&#115;&#64;&#x62;&#x61;&#x62;&#115;&#98;&#97;&#108;&#108;&#101;&#x74;&#115;&#99;&#104;&#111;&#111;&#x6c;&#x2e;&#110;&#x6c;">&#98;&#x61;&#98;&#115;&#64;&#x62;&#x61;&#x62;&#115;&#98;&#97;&#108;&#108;&#101;&#x74;&#115;&#99;&#104;&#111;&#111;&#x6c;&#x2e;&#110;&#x6c;</a> </p>
+<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#98;&#x61;&#x62;&#115;&#x40;&#x62;&#97;&#x62;&#115;&#98;&#x61;&#108;&#108;&#x65;&#116;&#115;&#x63;&#104;&#111;&#x6f;&#108;&#x2e;&#x6e;&#x6c;">&#98;&#x61;&#x62;&#115;&#x40;&#x62;&#97;&#x62;&#115;&#98;&#x61;&#108;&#108;&#x65;&#116;&#115;&#x63;&#104;&#111;&#x6f;&#108;&#x2e;&#x6e;&#x6c;</a> </p>
 </section>
         </main>
         <footer>
