--- a/hoeveel.html
+++ b/hoeveel.html
@@ -65,7 +65,7 @@
 </section><section><h2 id="dans-projecten">Dans Projecten</h2>
 <p>Dans projecten worden apart aangekondigd en kunnen varieren in prijs afhankelijk van de duur van het project.</p>
 </section><section><h2 id="betalings-regeling">Betalings regeling:</h2>
-<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#98;&#x61;&#x62;&#115;&#x40;&#x62;&#97;&#x62;&#115;&#98;&#x61;&#108;&#108;&#x65;&#116;&#115;&#x63;&#104;&#111;&#x6f;&#108;&#x2e;&#x6e;&#x6c;">&#98;&#x61;&#x62;&#115;&#x40;&#x62;&#97;&#x62;&#115;&#98;&#x61;&#108;&#108;&#x65;&#116;&#115;&#x63;&#104;&#111;&#x6f;&#108;&#x2e;&#x6e;&#x6c;</a> </p>
+<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#98;&#x61;&#98;&#115;&#64;&#98;&#97;&#x62;&#115;&#98;&#x61;&#x6c;&#x6c;&#x65;&#x74;&#115;&#x63;&#104;&#111;&#x6f;&#x6c;&#46;&#x6e;&#x6c;">&#98;&#x61;&#98;&#115;&#64;&#98;&#97;&#x62;&#115;&#98;&#x61;&#x6c;&#x6c;&#x65;&#x74;&#115;&#x63;&#104;&#111;&#x6f;&#x6c;&#46;&#x6e;&#x6c;</a> </p>
 </section>
         </main>
         <footer>
