--- a/wie.html
+++ b/wie.html
@@ -39,7 +39,7 @@ Babs Balletschool is een onderneming van <strong>Babs Broeders</strong>.</p>
 <p>Na de vooropleidingen in Rotterdam en Arnhem studeerde ik in 1997 af als dansdocente aan de opleiding Docent Dans ArtEZ Dansacademie Arnhem, en startte ik met lesgeven in de specialisaties kleuterballet, kinderballet, klassiekballet, spitzentechniek en flamencodans. 
 In Elst begon mijn loopbaan in 1998 bij de toenmalige balletschool &#39;Dans-Anne&#39;. Sindsdien heb ik op diverse dansscholen, basisscholen en culturele instellingen in Gelderland en Brabant de nodige ervaring op gedaan.</p>
 <p>Met trots kan ik zeggen dat sinds augustus 2008 mijn eigen balletschool een feit is.</p>
-<p>Dansplezier speelt een grote rol in mijn lessen en beheersing van de danstechniek maakt het dansen nog plezieriger. </p>
+<p>Dansplezier speelt een grote rol in mijn lessen en beheersing van de danstechniek maakt het dansen nog plezieriger. Hoe leuk is het als je voelt dat je iets leert en vooruitgang maakt.</p>
 <p>Door zelf te blijven trainen en bijscholingen te volgen probeer ik op de hoogte te blijven van de danstechnieken, lichamelijk inzicht, leerlijnen, methodiek en pedagogische mogelijkheden.</p>
 <p>Babs Balletschool is ook aangesloten bij het <a href="http://www.dansbelang.nl/">NBDO Dansbelang</a> de bond voor dansprofessionals.</p>
 <p>Dansen is voor mij een liefde, en ook een soort fijne verslaving die bij mij nooit is overgegaan. Ik hoop dat ik mijn dansleerlingen ook van deze liefde kan laten meegenieten.</p>
@@ -51,7 +51,10 @@ Naast het lesgeven bij Babs Balletschool heeft Britt ook een Massage praktijk. D
 </section><section><h1 id="daphne-wams">Daphne Wams</h1>
 <p><img src="resources/image/algemeen/DaphneWams%20(2).jpg" alt="Daphne">
 Daphne is in 2018 afgestudeerd van de Bachelor opleiding Docent Dans ArtEZ Dansacademie Arnhem. Tijdens haar lessen vindt ze het belangrijk om een fijne sfeer te creëren waarbinnen iedereen zijn of haar danskwaliteiten kan ontwikkelen, individueel of in de groep. Het vinden van balans tussen uitdaging en ontspanning speelt hierbij een rol. Daphne geeft graag aan verschillende groepen les, haar motto is dan ook dat iedereen kan dansen, zolang je er plezier aan beleeft. Bij Babs Balletschool geeft ze met veel plezier modern en jazz op de maandag avond aan tieners en volwassenen. </p>
-</section>
+</section><section><h1 id="sarah-döker">Sarah Döker</h1>
+<p><img src="resources/image/algemeen/Sarah%20Doker.jpeg" alt="Sarah">
+Sarah is in 2022 afgestudeerd aan de ARTEZ Bachelor Dansopleiding Docent Dans in Arnhem en heeft een enorme drive om haar leerlingen te laten dansen. Met oog voor detail en vrolijkheid staat zij voor de groepen. Sarah is naast docente; klassiek ballet, moderne dans en jazzballet ook gespecialiseerd in folklore/volksdans. Deze specialisatie geeft een verrassend tintje aan haar lessen. Dit seizoen gaat Sarah de woensdag kindergroepen op zich nemen maar ook bij projecten kun je haar voorbij zien komen. </p>
+</section><section></section>
         </main>
         <footer>
             <nav>
