Update from https://github.com/babsballetschool/website/commit/4b89a0806a9a7f205f24e4eafe7c058fcc4436da

--- a/hoeveel.html
+++ b/hoeveel.html
@@ -37,7 +37,7 @@
 <p><img src="resources/image/algemeen/portemonnaie%20ballet.jpg" alt="dansplezier bij Babs Balletschool"></p>
 <h2 id="reguliere-lessen--volledig-dansseizoen-2023-2024-zijn---38-lessen">Reguliere lessen = volledig dansseizoen (2023-2024 zijn +/- 38 lessen)</h2>
 <table>
-<tr><td>4 t/m 5 jaar(P1-K1):</td><td>€ ,- per seizoen (45 min. 1 les per week)</td></tr>
+<tr><td>4 t/m 5 jaar:</td><td>€ ,- per seizoen (45 min. 1 les per week)</td></tr>
 <tr><td>6 t/m 17 jaar:</td><td>€ ,- per seizoen (60 min. 1 les per week)</td></tr>
 <tr><td>18 jaar en ouder:</td><td>€,- per seizoen (60 min.1 les per week)</td></tr>
 <tr><td>extra Spitzen (15 min.):</td><td>€ ,- per seizoen. (aansluitend a.d. les & in overleg) Hierop krijgt u geen korting.</td></tr>
@@ -52,20 +52,22 @@
 <ul>
 <li>Een Korte Cursus is geen onderdeel van het reguliere rooster en is vaak een kennismakings cursus. Deze duren max.12 weken en worden vooraf aangekondigd. In rooster aangeduid als KC.</li>
 </ul>
-<table>                            **leerlingen:**              
-<tr><td>Korte cursus (12 lessen) t/m 17 jaar:</td><td>€ -</td></tr>
-<tr><td>Korte cursus (12 lessen) vanaf 18 jaar:</td><td>€ -</td></tr>
+<table>                            **leerlingen:**    
+<tr><td>Korte cursus (12 lessen) 45 min. 2-5 jaar:</td><td>€ -</td></tr>
+<tr><td>Korte cursus (12 lessen) 60 min. 6 t/m 17 jaar:</td><td>€ -</td></tr>
+<tr><td>Korte cursus (12 lessen) 60 min. vanaf 18 jaar:</td><td>€ -</td></tr>
 
 </table>                          **niet-leerlingen** 
 
-<pre><code>                              t/m 17 jaar:&lt;/td&gt;&lt;td&gt;€ -&lt;/td&gt;&lt;/tr&gt;
+<pre><code>                              2-5 jaar:&lt;/td&gt;&lt;td&gt;€ -&lt;/td&gt;&lt;/tr&gt;
+                              6 t/m 17 jaar:&lt;/td&gt;&lt;td&gt;€ -&lt;/td&gt;&lt;/tr&gt;
                               vanaf 18 jaar:&lt;/td&gt;&lt;td&gt;€ -&lt;/td&gt;&lt;/tr&gt;
 </code></pre>
 <p>De kortingen zijn niet van toepassing op de Korte Cursus.</p>
 </section><section><h2 id="dans-projecten">Dans Projecten</h2>
 <p>Dans projecten worden apart aangekondigd en kunnen varieren in prijs afhankelijk van de duur van het project.</p>
 </section><section><h2 id="betalings-regeling">Betalings regeling:</h2>
-<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#98;&#x61;&#98;&#115;&#64;&#98;&#97;&#x62;&#115;&#98;&#x61;&#x6c;&#x6c;&#x65;&#x74;&#115;&#x63;&#104;&#111;&#x6f;&#x6c;&#46;&#x6e;&#x6c;">&#98;&#x61;&#98;&#115;&#64;&#98;&#97;&#x62;&#115;&#98;&#x61;&#x6c;&#x6c;&#x65;&#x74;&#115;&#x63;&#104;&#111;&#x6f;&#x6c;&#46;&#x6e;&#x6c;</a> </p>
+<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#x62;&#97;&#x62;&#x73;&#64;&#x62;&#97;&#98;&#115;&#x62;&#97;&#108;&#108;&#101;&#x74;&#x73;&#99;&#104;&#111;&#111;&#x6c;&#46;&#110;&#x6c;">&#x62;&#97;&#x62;&#x73;&#64;&#x62;&#97;&#98;&#115;&#x62;&#97;&#108;&#108;&#101;&#x74;&#x73;&#99;&#104;&#111;&#111;&#x6c;&#46;&#110;&#x6c;</a> </p>
 </section>
         </main>
         <footer>
