Update from https://github.com/babsballetschool/website/commit/a0c1056f0ac65dae1b1c71f5e403081fa33a5714

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <p><img src="resources/image/algemeen/balletklok.jpg" alt="dansrooster 2023-2024 bij Babs&#39;Balletschool"> 
 Na de zomer straks weer lekker dansen? 
 Kom meedoen in de gratis indans-week van <strong>28 augustus t/m 1 september</strong> en schrijf je in voor het aankomende dansseizoen.
-via <a href="mailto:babs@babsballetschool.nl">babs@babsballetschool.nl</a></p>
+via het online formulier: <a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">inschrijfformulier</a></p>
 <p>Nieuw lesrooster &amp; vakantie rooster 23-24: </p>
 </section><section><h1 id="presentaties-2024">Presentaties 2024</h1>
 <p><img src="resources/image/algemeen/Winter%202021.jpg" alt="Presentaties Babs&#39;Balletschool"> 
