Update from https://github.com/babsballetschool/website/commit/25ac539dad7459c571357fbbd10eaa169659b14d

--- a/wanneer.html
+++ b/wanneer.html
@@ -38,25 +38,31 @@
 <iframe width="100%" height="830px" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vShF9QZbzqdBX1DwUQt7uIn9LxF8yweI4VsvrOrb3roSnKl87zY4YpYFR7b0MnEGFycEXP7QUxEP8kx/pubhtml?gid=1911534545&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
 
 <p><strong>Jaarplanning:</strong></p>
-<p><strong>Start seizoen 22-23</strong>    maandag 12 september 2022<br>(1e lessen volgens lesrooster)</p>
-<p><strong>Sjors Sportief weken</strong>   17 t/m 21 oktober 2022
+<p><strong>Start seizoen 23-24</strong>       maandag 28 augustus 2023<br>(gratis proeflessen) </p>
+<p><strong>Paardenmarkt</strong>              maandag 4 september 2023
+(er zijn die dag geen lessen) </p>
+<p><strong>Open Dag</strong>                  zondag 10 september 2023
+Culureel programma in samenwerking met Theater De KiK en muziekschool All Music. </p>
+<p><strong>Sjors Sportief weken</strong>       nog onbekend
 (via Sjors Sportief doen kinderen uit omgeving proeflessen mee)</p>
-<p><strong>Herfstvakantie</strong>       24 t/m 29 oktober 2022
+<p><strong>Herfstvakantie</strong>             16 t/m 20 oktober 2023
 (in de vakantie zijn er geen lessen)</p>
-<p> <strong>Kijk-lessen</strong>         14 t/m 19 november 2022<br>(familie en vrienden kunnen een les komen bekijken)</p>
-<p><strong>Kerstvakantie</strong>         26 december 2022 t/m 7 januari 2023<br>(in de vakantie zijn er geen lessen)</p>
-<p> <strong>Verkleed lessen</strong>      13 t/ 18 februari 2023<br>(Kom verkleed naar de lessen deze week!)</p>
-<p> <strong>Carnavalsvakantie</strong>    20 februari t/m 25 februari 2023<br>(in de vakantie zijn er geen lessen)</p>
-<p><strong>2e Paasdag</strong>            maandag 10 april 2023<br>(dit is een vrije dag, er zijn geen lessen) </p>
-<p><strong>Meivakantie</strong>            donderdag 27 april (koningsdag) t/m 5 mei 2023<br>(in de vakantie zijn er geen lessen)</p>
-<p><strong>Hemelvaart</strong>         18 &amp; 19 mei 2023
-(er zijn dan geen lessen) </p>
-<p><strong>2e Pinksterdag</strong>        maandag 29 mei 2023<br>(dit is een vrije dag, er zijn geen lessen) </p>
-<p><strong>Grote voorstelling Schouwburg Arnhem</strong> zaterdag 1 juli 2023
-Nodig al je publiek uit om te komen kijken! </p>
-<p><strong>Orientatie week</strong>      3 t/m 7 juli 2023<br>(Kinderen uit de K4 groepen (diploma groep) mogen in andere lessen orienteren welke dansstijl zij volgend seizoen willen kiezen)</p>
-<p> <strong>Diploma lessen</strong>        10 t/m 14 juli 2023<br>(Oudste kleuters uit K1 en oudste kindergroep K4 ontvangen hun diploma&#39;s. Familie en vrienden mogen hierbij aanwezig zijn!) </p>
-<p><strong>Zomervakantie</strong>         vanaf 17 juli 2023<br>(in de vakantie zijn er geen lessen)</p>
+<p> <strong>Kijk-lessen</strong>               20 t/m 24 november 2023<br>(familie en vrienden kunnen een les komen bekijken)</p>
+<p><strong>Pakjesavond</strong>                 5 december 2023
+(vanaf 18:00 vervallen de lessen) </p>
+<p><strong>Mini-Voorstelling &#39;Winter&#39;</strong>  16 december 2023
+(enkele groepen zullen optrdens verzorgen) </p>
+<p><strong>Kerstvakantie</strong>               25 december 2023 t/m 5 januari 2024<br>(in de vakantie zijn er geen lessen)</p>
+<p><strong>Verkleed lessen</strong>             5 t/ 9 februari 2024<br>(Kom verkleed naar de lessen deze week!)</p>
+<p> <strong>Carnavalsvakantie</strong>          12 februari t/m 16 februari 2024<br>(in de vakantie zijn er geen lessen)</p>
+<p><strong>2e Paasdag</strong>                  maandag 1 april 2024<br>(dit is een vrije dag, er zijn geen lessen) </p>
+<p><strong>Meivakantie</strong>                 donderdag 29 april t/m 10 mei 2024<br>(in de vakantie zijn er geen lessen)</p>
+<p><strong>2e Pinksterdag</strong>              maandag 20 mei 2024<br>(dit is een vrije dag, er zijn geen lessen) </p>
+<p><strong>Open Podium</strong>                 nog onbekend
+(Maak je eigen choreo en nodig al je publiek uit om te komen kijken!) </p>
+<p><strong>Orientatie week</strong>             24 juni t/m 28 juni 2024<br>(Kinderen uit de K4 groepen (diploma groep) mogen in andere lessen orienteren welke dansstijl zij volgend seizoen willen kiezen)</p>
+<p> <strong>Diploma lessen</strong>              1 t/m 5 juli 2024<br>(Oudste kleuters uit K1 en oudste kindergroep K4 ontvangen hun diploma&#39;s. Familie en vrienden mogen hierbij aanwezig zijn!) </p>
+<p><strong>Zomervakantie</strong>                vanaf 8 juli 2024<br>(in de vakantie zijn er geen lessen)</p>
 <h1 id="--sommige-vakantiesvrije-dagen-kunnen-afwijken-van-de-schoolvakanties">! ( sommige vakanties/vrije dagen kunnen afwijken van de schoolvakanties)</h1>
 <p><strong>Wijzigingen voorbehouden!</strong></p>
 </section>
