--- a/hoeveel.html
+++ b/hoeveel.html
@@ -60,7 +60,7 @@
 </section><section><h2 id="dans-projecten">Dans Projecten</h2>
 <p>Dans projecten worden apart aangekondigd en kunnen varieren in prijs afhankelijk van de duur van het project.</p>
 </section><section><h2 id="betalings-regeling">Betalings regeling:</h2>
-<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#98;&#x61;&#x62;&#115;&#64;&#98;&#97;&#x62;&#115;&#x62;&#97;&#108;&#x6c;&#101;&#x74;&#x73;&#99;&#104;&#x6f;&#x6f;&#108;&#46;&#110;&#108;">&#98;&#x61;&#x62;&#115;&#64;&#98;&#97;&#x62;&#115;&#x62;&#97;&#108;&#x6c;&#101;&#x74;&#x73;&#99;&#104;&#x6f;&#x6f;&#108;&#46;&#110;&#108;</a> </p>
+<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#98;&#97;&#x62;&#x73;&#64;&#x62;&#97;&#x62;&#115;&#x62;&#97;&#x6c;&#108;&#x65;&#x74;&#x73;&#99;&#x68;&#111;&#x6f;&#x6c;&#x2e;&#110;&#x6c;">&#98;&#97;&#x62;&#x73;&#64;&#x62;&#97;&#x62;&#115;&#x62;&#97;&#x6c;&#108;&#x65;&#x74;&#x73;&#99;&#x68;&#111;&#x6f;&#x6c;&#x2e;&#110;&#x6c;</a> </p>
 </section>
         </main>
         <footer>
