--- a/hoeveel.html
+++ b/hoeveel.html
@@ -60,7 +60,7 @@
 </section><section><h2 id="dans-projecten">Dans Projecten</h2>
 <p>Dans projecten worden apart aangekondigd en kunnen varieren in prijs afhankelijk van de duur van het project.</p>
 </section><section><h2 id="betalings-regeling">Betalings regeling:</h2>
-<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#x62;&#x61;&#98;&#115;&#x40;&#98;&#x61;&#x62;&#x73;&#98;&#97;&#108;&#x6c;&#101;&#116;&#x73;&#x63;&#104;&#111;&#111;&#108;&#x2e;&#x6e;&#x6c;">&#x62;&#x61;&#98;&#115;&#x40;&#98;&#x61;&#x62;&#x73;&#98;&#97;&#108;&#x6c;&#101;&#116;&#x73;&#x63;&#104;&#111;&#111;&#108;&#x2e;&#x6e;&#x6c;</a> </p>
+<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#98;&#x61;&#x62;&#x73;&#x40;&#98;&#97;&#98;&#x73;&#x62;&#x61;&#x6c;&#x6c;&#101;&#116;&#x73;&#x63;&#x68;&#111;&#111;&#108;&#46;&#110;&#108;">&#98;&#x61;&#x62;&#x73;&#x40;&#98;&#97;&#98;&#x73;&#x62;&#x61;&#x6c;&#x6c;&#101;&#116;&#x73;&#x63;&#x68;&#111;&#111;&#108;&#46;&#110;&#108;</a> </p>
 </section>
         </main>
         <footer>
