--- a/index.html
+++ b/index.html
@@ -36,8 +36,38 @@
             <section><h1 id="start-seizoen-2023-2024">Start seizoen 2023-2024</h1>
 <p><img src="resources/image/algemeen/balletklok.jpg" alt="dansrooster 2023-2024 bij Babs&#39;Balletschool"> 
 Na de zomer straks weer lekker dansen? 
-Kom meedoen in de gratis indans-week van <strong>28 augustus t/m 1 september</strong> en schrijf je in voor het aankomende dansseizoen.
-via het online formulier: <a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">inschrijfformulier</a></p>
+Kom meedoen in de gratis Workshop-dansweek van <strong>28 augustus t/m 1 september</strong> </p>
+<p><strong>Rooster Workshop-Dansweek:  28-8 t/m 1-9</strong></p>
+<p><strong>Maandag 28 augustus:</strong>
+16:00 workshop Jazzballet va 9 jaar
+17:00 workshop Jazzballet va 11 jaar
+18:00 workshop Ballet va niv 2 
+19:00 workshop Modern gevord. volw. 
+20:00 workshop Jazzballet interm.  volw. </p>
+<p><strong>Dinsdag 29 augustus:</strong>
+16:30 workshop Ballet 13+ intermed.
+17:30 workshop Ballet 16+ gevord.
+19:30 workshop Ballet volw Beg. 
+20:30 workshop Ballet volw. Interm. </p>
+<p><strong>Woensdag 30 augustus:</strong> 
+13:45 workshop Kleuterballet 4-5 jaar<br>14:30 workshop Kinderballet 6-7 jaar
+15:30 workshop Kinderballet 7-8 jaar
+16:30 workshop Kinderballet 8-9 jaar 
+17:30 workshop Ballet va 9 jr niv 1
+18:30 workshop Ballet va 11 jr niv 2/3
+19:30 workshop Ballet volw. Interm. 
+20:30 workshop Werelddans/Folklore volw. beg. </p>
+<p><strong>Donderdag 31 augustus:</strong> 
+16:00 workshop Modern va 9 jaar 
+17:00 workshop Jazzballet va 14 jaar
+20:00 workshop Ballet volw. gevord. </p>
+<p><strong>Vrijdag 1 september:</strong>
+14:00 workshop Kleuterballet 4-5 jaar
+14:45 workshop Kinderballet 6-8 jaar
+15:45 workshop Kinderballet 8-9 jaar
+19:45 workshop Ballet volw. gevord. 
+20:15 workshop Sevillanas dans.</p>
+<p>aanmeldformulier voor seizoen 2023-2024 : <a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">inschrijfformulier</a></p>
 </section><section><h1 id="presentaties-2024">Presentaties 2024</h1>
 <p><img src="resources/image/algemeen/Winter%202021.jpg" alt="Presentaties Babs&#39;Balletschool"> 
 In het nieuwe dansseizoen staan natuurlijk de lessen weer centraal maar organiseren we ook een Open Podium waar leerlingen hun eigen werk kunnen tonen. 
