--- a/dansproject.html
+++ b/dansproject.html
@@ -41,7 +41,7 @@ kosten totaal €50,- voor leerlingen 18+ en €45,- voor 18-
 Mensen van buitenaf zijn ook welkom, zij betalen € 7,- extra administratie kosten. 
 Ben snel met je inschrijving! 
 Bij voldoende animo gaat het project door. </p>
-<p>Inschrijven kan via het formulier dat in de studio ligt of via de mail: <a href="mailto:&#98;&#97;&#x62;&#115;&#64;&#x62;&#97;&#x62;&#115;&#98;&#x61;&#108;&#x6c;&#101;&#x74;&#x73;&#99;&#104;&#111;&#x6f;&#x6c;&#46;&#110;&#x6c;">&#98;&#97;&#x62;&#115;&#64;&#x62;&#97;&#x62;&#115;&#98;&#x61;&#108;&#x6c;&#101;&#x74;&#x73;&#99;&#104;&#111;&#x6f;&#x6c;&#46;&#110;&#x6c;</a> </p>
+<p>Inschrijven kan via het formulier dat in de studio ligt of via de mail: <a href="mailto:&#x62;&#x61;&#98;&#115;&#64;&#98;&#97;&#x62;&#115;&#98;&#x61;&#108;&#108;&#101;&#116;&#x73;&#99;&#104;&#111;&#111;&#108;&#46;&#110;&#108;">&#x62;&#x61;&#98;&#115;&#64;&#98;&#97;&#x62;&#115;&#98;&#x61;&#108;&#108;&#101;&#116;&#x73;&#99;&#104;&#111;&#111;&#108;&#46;&#110;&#108;</a> </p>
 </section>
         </main>
         <footer>
