--- a/wanneer.html
+++ b/wanneer.html
@@ -38,7 +38,7 @@
 <iframe width="100%" height="830px" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vShF9QZbzqdBX1DwUQt7uIn9LxF8yweI4VsvrOrb3roSnKl87zY4YpYFR7b0MnEGFycEXP7QUxEP8kx/pubhtml?gid=1911534545&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
 
 <p><strong>Jaarplanning:</strong></p>
-<p><strong>Start seizoen 23-24</strong>       maandag 28 augustus 2023<br>(gratis proeflessen) </p>
+<p><strong>Workshop Dansweek 23</strong>       maandag 28 augustus 2023<br>(gratis proeflessen) </p>
 <p><strong>Paardenmarkt</strong>              maandag 4 september 2023
 (er zijn die dag geen lessen) </p>
 <p><strong>Open Dag</strong>                  zondag 10 september 2023
