--- a/hoeveel.html
+++ b/hoeveel.html
@@ -53,14 +53,17 @@
 <li>Een Korte Cursus is geen onderdeel van het reguliere rooster en is vaak een kennismakings cursus. Deze duren max.12 weken en worden vooraf aangekondigd. In rooster aangeduid als KC.</li>
 </ul>
 <tr><td>Korte cursus (12 lessen) 45 min. 2-5 jaar:</td><td>€85,-</td></tr>
+
 <tr><td>Korte cursus (12 lessen) 60 min. 6 t/m 17 jaar:</td><td>€99,-</td></tr>
+
 <tr><td>Korte cursus (12 lessen) 60 min. vanaf 18 jaar:</td><td>€150 -</td></tr>
+
 
 <p>De kortingen zijn niet van toepassing op de Korte Cursus.</p>
 </section><section><h2 id="dans-projecten">Dans Projecten</h2>
 <p>Dans projecten worden apart aangekondigd en kunnen varieren in prijs afhankelijk van de duur van het project.</p>
 </section><section><h2 id="betalings-regeling">Betalings regeling:</h2>
-<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#98;&#x61;&#98;&#x73;&#x40;&#x62;&#x61;&#x62;&#115;&#x62;&#97;&#x6c;&#x6c;&#101;&#116;&#x73;&#99;&#104;&#111;&#x6f;&#x6c;&#x2e;&#110;&#108;">&#98;&#x61;&#98;&#x73;&#x40;&#x62;&#x61;&#x62;&#115;&#x62;&#97;&#x6c;&#x6c;&#101;&#116;&#x73;&#99;&#104;&#111;&#x6f;&#x6c;&#x2e;&#110;&#108;</a> </p>
+<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#x62;&#x61;&#98;&#115;&#64;&#x62;&#97;&#98;&#115;&#98;&#x61;&#108;&#x6c;&#x65;&#x74;&#x73;&#x63;&#104;&#x6f;&#111;&#108;&#x2e;&#110;&#x6c;">&#x62;&#x61;&#98;&#115;&#64;&#x62;&#97;&#98;&#115;&#98;&#x61;&#108;&#x6c;&#x65;&#x74;&#x73;&#x63;&#104;&#x6f;&#111;&#108;&#x2e;&#110;&#x6c;</a> </p>
 </section>
         </main>
         <footer>
