--- a/dansproject.html
+++ b/dansproject.html
@@ -41,7 +41,7 @@ kosten totaal €50,- voor leerlingen 18+ en €45,- voor 18-
 Mensen van buitenaf zijn ook welkom, zij betalen € 7,- extra administratie kosten. 
 Ben snel met je inschrijving! 
 Bij voldoende animo gaat het project door. </p>
-<p>Inschrijven kan via het formulier dat in de studio ligt of via de mail: <a href="mailto:&#98;&#x61;&#98;&#115;&#x40;&#98;&#97;&#98;&#x73;&#x62;&#x61;&#108;&#x6c;&#x65;&#x74;&#115;&#99;&#x68;&#x6f;&#x6f;&#x6c;&#46;&#110;&#108;">&#98;&#x61;&#98;&#115;&#x40;&#98;&#97;&#98;&#x73;&#x62;&#x61;&#108;&#x6c;&#x65;&#x74;&#115;&#99;&#x68;&#x6f;&#x6f;&#x6c;&#46;&#110;&#108;</a> </p>
+<p>Inschrijven kan via het formulier dat in de studio ligt of via de mail: <a href="mailto:&#x62;&#x61;&#98;&#x73;&#x40;&#98;&#97;&#98;&#x73;&#x62;&#x61;&#x6c;&#x6c;&#x65;&#x74;&#x73;&#99;&#x68;&#x6f;&#x6f;&#108;&#x2e;&#x6e;&#x6c;">&#x62;&#x61;&#98;&#x73;&#x40;&#98;&#97;&#98;&#x73;&#x62;&#x61;&#x6c;&#x6c;&#x65;&#x74;&#x73;&#99;&#x68;&#x6f;&#x6f;&#108;&#x2e;&#x6e;&#x6c;</a> </p>
 </section>
         </main>
         <footer>
