Update from https://github.com/babsballetschool/website/commit/fbd740838da4988c103724d0cfaa69b363538eae

--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
             <section><h1 id="start-seizoen-2023-2024">Start seizoen 2023-2024</h1>
 <p><img src="resources/image/algemeen/balletklok.jpg" alt="dansrooster 2023-2024 bij Babs&#39;Balletschool"> 
 Na de zomer weer lekker dansen? 
-Kom meedoen in de gratis Workshop-dansweek van <strong>28 aug t/m 1 sept</strong> </p>
+Aanmeldformulier voor seizoen 2023-2024 : <a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">inschrijfformulier</a>
+Rooster seizoen 23-24: </p>
+</section><section><h1 id="workshop-dansweek">Workshop-Dansweek</h1>
+<p>Kom meedoen in de gratis Workshop-dansweek van <strong>28 aug t/m 1 sept</strong> </p>
 <p><strong>Rooster Workshop-Dansweek:  28-8 t/m 1-9</strong></p>
 <p><strong>Maandag 28 augustus:</strong></p>
 <p>16:00 workshop Jazzballet va 9 jaar</p>
@@ -68,7 +71,6 @@ Kom meedoen in de gratis Workshop-dansweek van <strong>28 aug t/m 1 sept</strong
 <p>15:45 workshop Kinderballet 8-9 jaar</p>
 <p>19:45 workshop Ballet volw. gevord.</p>
 <p>20:15 workshop Sevillanas dans.</p>
-<p>aanmeldformulier voor seizoen 2023-2024 : <a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">inschrijfformulier</a></p>
 </section><section><h1 id="presentaties-2024">Presentaties 2024</h1>
 <p><img src="resources/image/algemeen/Winter%202021.jpg" alt="Presentaties Babs&#39;Balletschool"> 
 In het nieuwe dansseizoen staan natuurlijk de lessen weer centraal maar organiseren we ook een Open Podium waar leerlingen hun eigen werk kunnen tonen. 
