Update from https://github.com/babsballetschool/website/commit/a4926a6f70037baa7173f2a6aebcaccdff64afb3

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <p><img src="resources/image/algemeen/balletklok.jpg" alt="dansrooster 2023-2024 bij Babs&#39;Balletschool"> 
 Na de zomer weer lekker dansen? 
 Aanmeldformulier voor seizoen 2023-2024 : <a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">inschrijfformulier</a>
-Rooster seizoen 23-24: </p>
+Rooster seizoen 23-24: <iframe width="100%" height="830px" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vShF9QZbzqdBX1DwUQt7uIn9LxF8yweI4VsvrOrb3roSnKl87zY4YpYFR7b0MnEGFycEXP7QUxEP8kx/pubhtml?gid=1911534545&amp;single=true&amp;widget=true&amp;headers=false"></iframe></p>
 </section><section><h1 id="workshop-dansweek">Workshop-Dansweek</h1>
 <p>Kom meedoen in de gratis Workshop-dansweek van <strong>28 aug t/m 1 sept</strong> </p>
 <p><strong>Rooster Workshop-Dansweek:  28-8 t/m 1-9</strong></p>
