--- a/dansproject.html
+++ b/dansproject.html
@@ -41,7 +41,7 @@ kosten totaal €50,- voor leerlingen 18+ en €45,- voor 18-
 Mensen van buitenaf zijn ook welkom, zij betalen € 7,- extra administratie kosten. 
 Ben snel met je inschrijving! 
 Bij voldoende animo gaat het project door. </p>
-<p>Inschrijven kan via het formulier dat in de studio ligt of via de mail: <a href="mailto:&#98;&#97;&#x62;&#x73;&#64;&#98;&#97;&#98;&#115;&#x62;&#97;&#108;&#108;&#x65;&#x74;&#115;&#99;&#104;&#111;&#111;&#108;&#46;&#x6e;&#108;">&#98;&#97;&#x62;&#x73;&#64;&#98;&#97;&#98;&#115;&#x62;&#97;&#108;&#108;&#x65;&#x74;&#115;&#99;&#104;&#111;&#111;&#108;&#46;&#x6e;&#108;</a> </p>
+<p>Inschrijven kan via het formulier dat in de studio ligt of via de mail: <a href="mailto:&#98;&#97;&#98;&#115;&#64;&#98;&#x61;&#98;&#115;&#98;&#x61;&#108;&#x6c;&#101;&#x74;&#115;&#99;&#104;&#x6f;&#x6f;&#x6c;&#x2e;&#x6e;&#x6c;">&#98;&#97;&#98;&#115;&#64;&#98;&#x61;&#98;&#115;&#98;&#x61;&#108;&#x6c;&#101;&#x74;&#115;&#99;&#104;&#x6f;&#x6f;&#x6c;&#x2e;&#x6e;&#x6c;</a> </p>
 </section>
         </main>
         <footer>
