Update from https://github.com/babsballetschool/website/commit/4a007df607d1b9257deaa774c5096f7694546d25

--- a/dansproject.html
+++ b/dansproject.html
@@ -41,7 +41,7 @@ kosten totaal €50,- voor leerlingen 18+ en €45,- voor 18-
 Mensen van buitenaf zijn ook welkom, zij betalen € 7,- extra administratie kosten. 
 Ben snel met je inschrijving! 
 Bij voldoende animo gaat het project door. </p>
-<p>Inschrijven kan via het formulier dat in de studio ligt of via de mail: <a href="mailto:&#98;&#x61;&#98;&#x73;&#64;&#x62;&#97;&#98;&#x73;&#x62;&#x61;&#108;&#108;&#x65;&#x74;&#115;&#99;&#104;&#111;&#x6f;&#x6c;&#x2e;&#x6e;&#x6c;">&#98;&#x61;&#98;&#x73;&#64;&#x62;&#97;&#98;&#x73;&#x62;&#x61;&#108;&#108;&#x65;&#x74;&#115;&#99;&#104;&#111;&#x6f;&#x6c;&#x2e;&#x6e;&#x6c;</a> </p>
+<p>Inschrijven kan via het formulier dat in de studio ligt of via de mail: <a href="mailto:&#98;&#97;&#98;&#115;&#x40;&#98;&#x61;&#98;&#115;&#x62;&#97;&#108;&#x6c;&#101;&#116;&#x73;&#x63;&#x68;&#x6f;&#111;&#x6c;&#x2e;&#110;&#108;">&#98;&#97;&#98;&#115;&#x40;&#98;&#x61;&#98;&#115;&#x62;&#97;&#108;&#x6c;&#101;&#116;&#x73;&#x63;&#x68;&#x6f;&#111;&#x6c;&#x2e;&#110;&#108;</a> </p>
 </section>
         </main>
         <footer>
