Update from https://github.com/babsballetschool/website/commit/8df9375de224439de110694afb5214de85d4c012

--- a/index.html
+++ b/index.html
@@ -38,13 +38,19 @@
 Na de zomer weer lekker dansen? </p>
 <p><a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">Inschrijfformulier</a></p>
 <p><a href="https://www.babsballetschool.nl/wanneer.html">Rooster 2023-2024</a></p>
-</section><section><h1 id="paardenmarkt-elst">Paardenmarkt Elst</h1>
-<p><img src="resources/image/algemeen/balletkapstok.jpg" alt="dansplezier bij Babs&#39;Balletschool"> 
-Op maandag 4 september staat Elst in het teken van de Paardenmarkt, wij zijn dan gesloten, er zijn dan geen lessen. </p>
 </section><section><h1 id="open-dag">Open Dag</h1>
 <p><img src="resources/image/algemeen/Open%20Dag%20(2).jpg" alt="Open Dag bij Babs&#39;Balletschool"> 
 <strong>Zondag 10 september</strong> is er weer een gezellige Open Dag in samenwerking met de Muziekschool All Music en Theater de KiK.
-Tijdens deze dag kun je genieten van workshops, presentaties en open lessen bekijken. Het programma volgt eind augustus.</p>
+Tijdens deze dag kun je genieten van workshops, presentaties en open lessen bekijken. </p>
+<p><strong>Dans Programma in dansstudio:</strong><br>11:00 Peuterdans 2-4 jaar
+12:00 Kleuterballet 4-6 jaar
+13:00 Kinderballet 6-9 jaar
+14:00 Jazzballet vanaf 9 jaar
+16:00 Moderne dans volwassenen.</p>
+<p><strong>Dans presentaties in theaterzaal:</strong>
+13:00-13:15  (Klassiekballet en Moderne tieners) 
+14:45-15:00  (Kinderballet, Klassiekballet &amp; Modern tieners) </p>
+<p>Bekijk ook het programma van Theater de KiK. <a href="https://theaterdekik.nl/acties/opening-cultureel-seizoen-10-9/">Buiten Programma en film</a></p>
 </section><section><h1 id="presentaties-2024">Presentaties 2024</h1>
 <p><img src="resources/image/algemeen/Winter%202021.jpg" alt="Presentaties Babs&#39;Balletschool"> 
 In het nieuwe dansseizoen staan natuurlijk de lessen weer centraal maar organiseren we ook een Open Podium waar leerlingen hun eigen werk kunnen tonen. 
