Update from https://github.com/babsballetschool/website/commit/b90ea2bdb179ab8a7102d0a7118dedd8dc33d7d0

--- a/wanneer.html
+++ b/wanneer.html
@@ -42,7 +42,7 @@
 <p><strong>Paardenmarkt</strong>              maandag 4 september 2023
 (er zijn die dag geen lessen) </p>
 <p><strong>Open Dag</strong>                  zondag 10 september 2023
-Culureel programma in samenwerking met Theater De KiK en muziekschool All Music. </p>
+Opening cultureel seizoen in samenwerking met Theater De KiK en muziekschool All Music. </p>
 <p><strong>Sjors Sportief weken</strong>       nog onbekend
 (via Sjors Sportief doen kinderen uit omgeving proeflessen mee)</p>
 <p><strong>Herfstvakantie</strong>             16 t/m 20 oktober 2023
