Update from https://github.com/babsballetschool/website/commit/5c0483b2ad99a02ff33edfe38503259b37890950

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Tijdens deze dag kun je genieten van workshops, presentaties en open lessen beki
 
 
 <p><strong>Dans presentaties in theaterzaal:</strong></p>
-<p>13:00-13:15  (Klassiekballet en Moderne tieners) 
+<p>13:00-13:15  (Klassiekballet en Modern tieners) 
 14:45-15:00  (Kinderballet, Klassiekballet &amp; Modern tieners) </p>
 <table>
 
