Update from https://github.com/babsballetschool/website/commit/a4300699ae9caacb2d1ff6d7614ff07766936fbb

--- a/index.html
+++ b/index.html
@@ -40,19 +40,8 @@ Na de zomer weer lekker dansen? </p>
 <p><a href="https://www.babsballetschool.nl/wanneer.html">Rooster 2023-2024</a></p>
 </section><section><h1 id="open-dag">Open Dag</h1>
 <p><img src="resources/image/algemeen/Open%20Dag%20(2).jpg" alt="Open Dag bij Babs&#39;Balletschool"> 
-<strong>Zondag 10 september</strong> is er weer een gezellige Open Dag in samenwerking met de Muziekschool All Music en Theater de KiK.
-Tijdens deze dag kun je genieten van workshops, presentaties en open lessen bekijken. </p>
-<p><strong>Dans Programma in dansstudio:</strong></p>
-<p>11:00 Peuterdans 2-4 jaar</p>
-<p>12:00 Kleuterballet 4-6 jaar</p>
-<p>13:00 Kinderballet 6-9 jaar</p>
-<p>14:00 Jazzballet vanaf 9 jaar</p>
-<p>15:00 Moderne dans vanaf 9 jaar </p>
-<p>16:00 Moderne dans volwassenen.</p>
-<p><strong>Dans presentaties in theaterzaal:</strong></p>
-<p>13:00-13:15  (Klassiekballet en Modern tieners) </p>
-<p>14:45-15:00  (Kinderballet, Klassiekballet &amp; Modern tieners) </p>
-<p>Bekijk ook het programma van Theater de KiK. <a href="https://theaterdekik.nl/acties/opening-cultureel-seizoen-10-9/">Buiten Programma en film</a></p>
+<strong>Zondag 10 september</strong> was het warm maar erg gezellig tijdens onze Open Dag. 
+Ook enthousiast geworden? Hierboven de link om je in te schrijven voor seizoen 2023-2024 of meld je aan voor een proefles mailto:<a href="mailto:&#98;&#97;&#x62;&#x73;&#64;&#98;&#97;&#x62;&#x73;&#98;&#x61;&#x6c;&#x6c;&#x65;&#x74;&#115;&#99;&#104;&#111;&#x6f;&#x6c;&#x2e;&#x6e;&#108;">&#98;&#97;&#x62;&#x73;&#64;&#98;&#97;&#x62;&#x73;&#98;&#x61;&#x6c;&#x6c;&#x65;&#x74;&#115;&#99;&#104;&#111;&#x6f;&#x6c;&#x2e;&#x6e;&#108;</a></p>
 </section><section><h1 id="presentaties-2024">Presentaties 2024</h1>
 <p><img src="resources/image/algemeen/Winter%202021.jpg" alt="Presentaties Babs&#39;Balletschool"> 
 In het nieuwe dansseizoen staan natuurlijk de lessen weer centraal maar organiseren we ook een Open Podium waar leerlingen hun eigen werk kunnen tonen. 
