Update from https://github.com/babsballetschool/website/commit/06095c077c1f73efda6d167c7ab8b55b23114e94

--- a/wanneer.html
+++ b/wanneer.html
@@ -43,7 +43,7 @@
 (er zijn die dag geen lessen) </p>
 <p><strong>Open Dag</strong>                  zondag 10 september 2023
 Opening cultureel seizoen in samenwerking met Theater De KiK en muziekschool All Music. </p>
-<p><strong>Sjors Sportief weken</strong>       nog onbekend
+<p><strong>Sjors Sportief week</strong>       25 t/m 29 september  2023
 (via Sjors Sportief doen kinderen uit omgeving proeflessen mee)</p>
 <p><strong>Herfstvakantie</strong>             16 t/m 20 oktober 2023
 (in de vakantie zijn er geen lessen)</p>
