Update from https://github.com/babsballetschool/website/commit/ba373d00cfb5d711b7312539d6c2a1d053d9f828

--- a/index.html
+++ b/index.html
@@ -38,10 +38,15 @@
 Na de zomer weer lekker dansen? </p>
 <p><a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">Inschrijfformulier</a></p>
 <p><a href="https://www.babsballetschool.nl/wanneer.html">Rooster 2023-2024</a></p>
-</section><section><h1 id="sjors-sportief">Sjors Sportief</h1>
-<p><img src="resources/image/algemeen/sjorssportief&creatief.jpg" alt="Sjors Sportief bij Babs&#39;Balletschool"> 
-In de week van <strong>25 t/m 29 september</strong> zijn er weer kinderen welkom die zich via Sjors Sportief hebben aangemeld om een keer te komen dansen. 
-Zij kunnen zo gratis ervaren hoe leuk dansen is. </p>
+</section><section><h1 id="dance-battle--workshops">Dance Battle &amp; workshops</h1>
+<p><img src="resources/image/algemeen/Dancebattle%202023.jpg" alt="Dance Battle bij Theater de KiK "> 
+<strong>27 oktober t/m 1 december</strong> kun je mee doen met dansworkshops voor jongerenen. (12 tot 18 jaar)
+vrijdag avond
+19:00 - 20:15 Ballet / Lyrics / Moderne dans 
+20:30 - 21:45 uur Streetdance / Hiphop / Urban Dance / Jazzballet</p>
+<p>De jongeren die meedoen aan de workshops mogen ook optreden tijdens de finale-avond van de Dancebattle op <strong>vrijdag 1 december</strong>
+Tijdens de finale-avond is er een vak- en publieksjury aanwezig die de winnaars kiezen, er zijn diverse prijzen te winnen (aanmoediging, beste performance, beste techniek, origineelste uitvoering etc. </p>
+<p>Als je in Overbetuwe woont of op school zit kun je je aanmelden voor de workshops via theaterdekik.nl </p>
 </section><section><h1 id="presentaties-2023-2024">Presentaties 2023-2024</h1>
 <p><img src="resources/image/algemeen/templates/snowflakes-ballerina.jpg" alt="Presentaties Babs&#39;Balletschool"> 
 In het nieuwe dansseizoen staan natuurlijk de lessen weer centraal maar organiseren we ook diverse presentaties. Op <strong>zaterdag 16 december</strong> presenteren we een mini voorstelling WINTER in Theater de KiK en op <strong>25 mei 2024</strong> een Open Podium waar leerlingen hun eigen werk kunnen tonen. 
